api-only.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-api
spec:
  serviceName: mongodb-api-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-api # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: mongodb-api # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb-api
        image: paulgilchrist/mongodb-api:latest
        ports:
        - containerPort: 80
          name: mongodb-api        
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-api-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
  selector:
    app: mongodb-api
  type: LoadBalancer
