kube-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  labels:
    app: angular-service
spec:
  type: LoadBalancer
  ports:
    - port: 80 # Exposed port on LoadBalancer
      targetPort: 3000 # Container port
      protocol: TCP
  selector: # Pods to load balance traffic to
    app: angular-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: angular-deployment
spec:
  selector:
    matchLabels:
      app: angular-pod
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: angular-pod
    spec:
      containers:
        - name: front-end
          image: paulgilchrist/angular-template
          ports:
            - containerPort: 3000
          livenessProbe: # Defines the health checking
            tcpSocket: # TCP probe
              port: 3000
            initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ballistics-service
  labels:
    app: ballistics-service
spec:
  type: LoadBalancer
  ports:
    - port: 81 # Exposed port on LoadBalancer
      targetPort: 3000 # Container port
      protocol: TCP
  selector: # Pods to load balance traffic to
    app: ballistics-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ballistics-deployment
spec:
  selector:
    matchLabels:
      app: ballistics-pod
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: ballistics-pod
    spec:
      containers:
        - name: front-end
          image: paulgilchrist/ballistics
          ports:
            - containerPort: 3000
          livenessProbe: # Defines the health checking
            tcpSocket: # TCP probe
              port: 3000
            initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: eve-missions-service
  labels:
    app: eve-missions-service
spec:
  type: LoadBalancer
  ports:
    - port: 82 # Exposed port on LoadBalancer
      targetPort: 3000 # Container port
      protocol: TCP
  selector: # Pods to load balance traffic to
    app: eve-missions-pod
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eve-missions-deployment
spec:
  selector:
    matchLabels:
      app: eve-missions-pod
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: eve-missions-pod
    spec:
      containers:
        - name: front-end
          image: paulgilchrist/eve-missions
          ports:
            - containerPort: 3000
          livenessProbe: # Defines the health checking
            tcpSocket: # TCP probe
              port: 3000
            initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
            timeoutSeconds: 1
---
