mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: mongodb # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        command: ["mongod"]
        args: ["--dbpath=/data/db", "--bind_ip_all"] # , "--auth", "--keyFile", "/data/db/keyfile", "--replSet", "rs0"
        image: mongo:latest
        ports:
        - containerPort: 27017
          name: mongodb
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db # must match configmap dbPath and "command" args
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-api
spec:
  serviceName: mongodb-api-service
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-api # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: mongodb-api # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb-api
        image: paulgilchrist/mongodb-api:latest
        livenessProbe: # Defines the health checking
          tcpSocket: # TCP probe
            port: 80
          initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          name: mongodb-api        
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-api-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 80
  selector:
    app: mongodb-api
  type: LoadBalancer
