ingress-only.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - contacts.company.com
    secretName: company-cert
  rules:
  - host: contacts.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contacts-api-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - products.company.com
    secretName: company-cert
  rules:
  - host: products.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: products-api-service
            port:
              number: 80
